# python-fritzhome

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  setup.cfg  setup.py
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: ci.yml  publish.yml  test.yml  unittests.yml
doc/: CONTRIBUTING.rst
pyfritzhome/: __init__.py  cli.py  errors.py  fritzhome.py  fritzhomebutton.py  fritzhomedevice.py  fritzhomedevicefeatures.py
pyfritzhome/device/: __init__.py  alarm.py  base.py  fritzhomedevicefeatures.py  powermeter.py  repeater.py  switch.py  temperature.py  thermostat.py
pyfritzhome/devicetypes/: __init__.py  fritzhomedevicealarm.py  fritzhomedevicebase.py  fritzhomedeviceblind.py  fritzhomedevicebutton.py  fritzhomedevicefeatures.py  fritzhomedevicehumidity.py  fritzhomedevicelevel.py  fritzhomedevicelightbulb.py  fritzhomedevicepowermeter.py  fritzhomedevicerepeater.py  fritzhomedeviceswitch.py  fritzhomedevicetemperature.py  fritzhomedevicethermostat.py  fritzhomeentitybase.py  fritzhometemplate.py  fritzhometrigger.py
tests/: __init__.py  abstractdevicetest.py  elements.py  helper.py  test_device.py  test_fritzhome.py  test_fritzhomealarmdevice.py  test_fritzhomebasedevice.py  test_fritzhomedevice.py  test_fritzhomedevicealarm.py  test_fritzhomedevicebase.py  test_fritzhomedeviceblind.py  test_fritzhomedevicebutton.py  test_fritzhomedevicelightbulb.py  test_fritzhomedevicepowermeter.py  test_fritzhomedevicerepeater.py  test_fritzhomedeviceswitch.py  test_fritzhomedevicetemperature.py  test_fritzhomedevicethermostat.py  test_fritzhomedevicethermostat_group.py  test_fritzhomepowermeterdevice.py  test_fritzhomerepeaterdevice.py  test_fritzhomeswitchdevice.py  test_fritzhometemperaturedevice.py  test_fritzhometemplate.py  test_fritzhomethermostatdevice.py  test_fritzhometrigger.py
tests/responses/: device_alert_no_alertstate.xml  device_alert_off.xml  device_alert_on.xml  device_button_fritzdect440.xml  device_hkr_fw_03_50.xml  device_hkr_fw_03_54.xml  device_hkr_no_temp_values.xml  device_hkr_state_manual.xml  device_hkr_state_off.xml  device_hkr_state_on.xml  device_list.xml  device_list_battery_low.xml  device_list_battery_ok.xml  device_magenta_smoke_alarm.xml  device_no_devicelock_element.xml  device_not_present.xml  login_rsp_with_valid_sid.xml  login_rsp_with_valid_sid_pbkdf2.xml  login_rsp_without_valid_sid.xml  login_rsp_without_valid_sid_pbkdf2.xml
tests/responses/alarm/: device_alert_on.xml
tests/responses/base/: device_list.xml  device_list_no_txbusy.xml  device_list_not_txbusy.xml  device_list_removed_device.xml  device_list_txbusy.xml  device_not_txbusy.xml  device_txbusy.xml  device_with_umlaut_in_name.xml
tests/responses/blind/: device_blind_rollotron1213.xml
tests/responses/button/: device_button_fritzdect440_fw_05_10.xml
(+22 files in other folders)
