[metadata]
name = pyfritzhome
version = 0.6.16
description = Fritz!Box Smarthome Python Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/hthiery/python-fritzhome

author = Heiko Thiery
author_email = heiko.thiery@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
include_package_data = true
test_suite = tests
setup_requires = setuptools
install_requires = requests; cryptography
tests_requires = pytest

[options.entry_points]
console_scripts =
    fritzhome=pyfritzhome.cli:main

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
max-line-length = 88
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[tool:pytest]
pythonpath = .
testpaths = tests
norecursedirs = .git
addopts =
    --strict-markers

[coverage:run]
omit =
	pyfritzhome/cli.py
	*/python?.?/*
	*/site-packages/nose/*
	*/tests/*
	*/pyasn1/*
	*/ndg/*
	*/doc/*

[pep257]
ignore = D203
match-dir = pyfritzhome/*

[pydocstyle]
ignore = D203,D213
match-dir = pyfritzhome/*
